# doblaje-videos

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  test_dialog.py
gui/: app.py
modules/: assembler.py  downloader.py  extractor.py  srt_parser.py  transcriber.py  translator.py  tts.py
